--- a/components/product/denturesProduct/DenturesP.module.css
+++ b/components/product/denturesProduct/DenturesP.module.css
@@ -52,8 +52,13 @@ direction: rtl; */
 #button2,
 #button3 {
   margin: 10px;
+  width: 100px;
+  height: 40px;
   border: 0;
   padding: 5px;
+  padding-top: 10px;
+  display: inline-flex;
+  justify-content:space-around;
   font-weight: 600;
   border-radius: 10px;
   transition: all 0.5s ease-in-out;
@@ -61,11 +66,6 @@ direction: rtl; */
   background: #b30000;
   
   }
-  #button1,#button3{
-  width: 100px;
-}
-
-
 #button1:hover,
 #button2:hover,
 #button3:hover {
